# POS-sem

./: .gitignore  CMakeLists.txt  Makefile
src/: client.c  server.c  snake.h
